--- a/TheBigApple - Søknad.html
+++ b/TheBigApple - Søknad.html
@@ -16,9 +16,9 @@
     </div>
     <div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="TheBigApple - INDEX.html">Hjem</a></li>
+        <li><a href="TheBigApple - INDEX.html">Hjem</a></li>
         </li>
-        <li><a href="TheBigApple - Søknad.html">Søknad</a></li>
+        <li class="active"><a href="TheBigApple - Søknad.html">Søknad</a></li>
         <li><a href="TheBigApple - Forum.html">Forum</a></li>
       </ul>
     </div>
