--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="INDEX.html">TheBigApple</a>
+      <a class="navbar-brand" href="Index.html">TheBigApple</a>
     </div>
     <div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="INDEX.html">Hjem</a></li>
+        <li class="active"><a href="Index.html">Hjem</a></li>
         </li>
         <li><a href="TheBigApple - Søknad.html">Søknad</a></li>
         <li><a href="TheBigApple - Forum.html">Forum</a></li>
